# libclod

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  benchmark_8c_source.html  big__endian_8h.html  big__endian_8h.js  big__endian_8h_source.html  classes.html  compress_8c_source.html  compression_8c_source.html  compression_8h.html  compression_8h.js  compression_8h_source.html  compression__libraries_8h_source.html  compression__test_8c_source.html  coord_8h_source.html  crc_8c_source.html  crc__tables_8h_source.html  crc__tables__generate_8c_source.html  decompress_8c_source.html  dir_0174561da1a095cb37f0574e92f8cf73.html  dir_0174561da1a095cb37f0574e92f8cf73.js  dir_0dd8795accda4c5de4ac3829ec1293d4.html  dir_0dd8795accda4c5de4ac3829ec1293d4.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_19ce21eb7ea6235951e65d5fb6f5a49d.html  dir_19ce21eb7ea6235951e65d5fb6f5a49d.js  dir_20706930dc76f634e133f76dc3cfb728.html  dir_20706930dc76f634e133f76dc3cfb728.js  dir_40ed6a89610fc2370cf3ffcd6469b940.html  dir_40ed6a89610fc2370cf3ffcd6469b940.js  dir_4a4450676f04e5aff83abe0a0aa85cd5.html  dir_4a4450676f04e5aff83abe0a0aa85cd5.js  dir_565cdd2637a496adff24344f738a7244.html  dir_565cdd2637a496adff24344f738a7244.js  dir_640a5ecfd31c8c02dc5abd6d82ef02ce.html  (+187 more)
.github/workflows/: doxygen-gh-pages.yml
cmake/: Findlz4.cmake
include/clod/: big_endian.h  compression.h  hash.h  lib.h  nbt.h  region.h  sstr.h  table.h  vmath.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  groups_2.js  groups_4.js  groups_5.js  groups_6.js  (+23 more)
src/: CMakeLists.txt  clod_config.h.in
src/compression/: CMakeLists.txt  compress.c  compression.c  compression_config.h.in  compression_libraries.h  decompress.c
src/hash/: CMakeLists.txt  crc.c  crc_tables.h  crc_tables_generate.c  siphash.c
src/nbt/: CMakeLists.txt  nbt.c
src/region/: CMakeLists.txt  error.c  error.h  file_cache.c  filename.c  filename.h  header.h  region_file.c  region_file.h  region_impl.h  region_open.c  region_read.c
src/region/platform/: CMakeLists.txt  platform.h
src/region/platform/unix/: CMakeLists.txt  dir.c  dir_iter.c  file.c  unix.c
src/region/region_format/: CMakeLists.txt  format.c  format.h  header.h  libclod_format.md  region_header.h
src/table/: CMakeLists.txt  table.c
test/: test.h  vec_group.c
test/compression/: compression_test.c  libdeflate.c  lz4.c  lzma.c  uniform_behavior.c  zstd.c
test/hash/: expected_outputs.c  streaming_test.c
test/nbt/: benchmark.c  level.nbt  parse_level.c  player.nbt  print_level.c
test/table/: set_get_many.c  simple_all_methods.c
